--- a/gnome-shell/src/gnome-shell-sass/_common.scss
+++ b/gnome-shell/src/gnome-shell-sass/_common.scss
@@ -146,8 +146,7 @@ StScrollBar {
   -slider-handle-radius: 8px;
   -slider-handle-border-width: 1px;
   -slider-handle-border-color: $borders_color;
-  color: $bg_color; /* FIXME to match gtk, we'd need to style the border of the slider, not
-     the whole widget */
+  color: if($variant == 'light', lighten($bg_color, 10%), darken($bg_color,4%));
   &:hover { color: $_hover_bg_color; }
   &:active { color: $_active_bg_color; }
 }
@@ -1155,11 +1154,6 @@ StScrollBar {
 
 
   // a little unstructured mess:
-
-  .system-switch-user-submenu-icon {
-    icon-size: 16px;
-    padding: 0 4px;
-  }
 
   #appMenu {
     spinner-image: url("resource:///org/gnome/shell/theme/process-working.svg");
